<resources>
    <string name="app_name">My Cart</string>
    <string name="title">MPR Store</string>
    <string name="search_text">Search</string>
    <string name="price_text">Price</string>
    <string name="name_text">Name</string>
    <string name="order_text">Order</string>
    <string name="total_price">Total Price</string>
    <string name="price">500000 VND</string>
    <string name="empty_text">Your cart is empty</string>
    <string name="checkout">Check Out</string>
    <string name="quantity">1</string>
</resources>