<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_weight="10"
    android:orientation="horizontal"
    android:background="@color/colorBackground"
    app:layout_constraintCircleRadius="20dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        >

        <ImageView
            android:id="@+id/imgCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/order_text"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/price"
            android:textColor="@color/orange"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#c4c4c4"
        android:orientation="vertical"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/btnInc"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:src="@drawable/ic_baseline_add_24" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textColor="@color/orange"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/btnDec"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:src="@drawable/ic_baseline_remove_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTotalOfEachProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_weight="2"
        android:text="@string/price"
        android:textColor="@color/orange"
        android:textSize="14sp" />

</LinearLayout>